# diplom

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_foods.py  0003_user_roles.py  0004_more_foods.py  0005_menu_plans.py  0006_support_messages.py  0007_operator_role.py  0008_support_message_type.py  0009_menu_plan_status.py
app/: main.py
app/core/: config.py  dependencies.py  security.py
app/db/: session.py
app/models/: __init__.py  food.py  menu_plan.py  support.py  user.py  weight.py
app/repositories/: food_repository.py  menu_plan_repository.py  support_repository.py  user_repository.py  weight_repository.py
app/routers/: admin.py  auth.py  food.py  menu_plan.py  support.py  weight.py
app/schemas/: food.py  menu_plan.py  support.py  user.py  weight.py
app/services/: auth_service.py  food_service.py  llm_menu_service.py  manual_menu_service.py  menu_plan_service.py  weight_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/api/: client.js  client.ts
frontend/src/components/: GuestRoute.jsx  Layout.jsx  LegalModal.jsx  PrivateRoute.jsx  PrivateRoute.tsx  SupportChat.jsx  WeightChart.tsx  WeightForm.tsx
frontend/src/context/: AuthContext.jsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdminDashboard.jsx  Dashboard.jsx  DashboardPage.tsx  DietPlan.jsx  Landing.jsx  Login.jsx  LoginPage.tsx  Profile.jsx  (+4 more)
(+8 files in other folders)
